style: Change the overall look
The client wanted the following changes: background, layout, color
palette, photos. I did the changes and adapted everything to be mobile
responsive as well.

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -7,9 +7,9 @@
   font-size: 62.5%; /* 1rem = 10px */
 
   --primary-color: #f9f6ee;
-  --secondary-color: #e3e1db;
-  --tertiary-color: #dacbb1;
-  --quaternary-color: #9d744d;
+  --secondary-color: #dfc7b6;
+  --tertiary-color: #b6977d;
+  --quaternary-color: #b3b2ad;
 
   --primary-font: "Cormorant Garamond", serif;
   --secondary-font: "Unna", serif;
@@ -17,7 +17,9 @@
 
 body,
 html {
-  background-color: var(--primary-color);
+  background-image: url("../assets/background.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
   font-size: 1.6rem;
   font-family: var(--primary-font);
 
@@ -31,8 +33,6 @@ html {
 */
 
 #main-header {
-  backdrop-filter: blur(50px);
-  -webkit-backdrop-filter: blur(50px);
   width: 100%;
 
   position: fixed;
@@ -52,9 +52,9 @@ nav {
 }
 
 #booking-button {
-  color: var(--quaternary-color);
+  color: var(--primary-color);
 
-  border: 1px solid var(--quaternary-color);
+  border: 1px solid var(--primary-color);
   border-radius: 50px;
 
   padding: 10px 20px;
@@ -74,7 +74,6 @@ nav {
 */
 
 #home {
-  background-color: var(--primary-color);
   width: 100%;
   height: 100vh;
 
@@ -109,8 +108,8 @@ nav {
 }
 
 #home-logo {
-  width: 100vw;
-  fill: var(--tertiary-color);
+  width: 700px;
+  fill: var(--primary-color);
 
   position: absolute;
   top: 50%;
@@ -125,18 +124,22 @@ nav {
 */
 
 #services {
-  background-color: var(--tertiary-color);
-  color: var(--primary-color);
+  background-color: var(--primary-color);
+  color: var(--tertiary-color);
 
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  width: calc(100vw - 100px);
+  max-width: 950px;
 
-  padding: 40px 0px;
+  margin: auto;
+  padding: 30px;
+  border-radius: 10px;
+
+  box-shadow: 10px 10px 10px #00000020;
 }
 
 #services-header h2 {
+  margin-bottom: 20px;
+
   text-align: center;
   font-size: 8rem;
   font-weight: 400;
@@ -144,14 +147,39 @@ nav {
 
 .service-cards {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 30px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.service-wrapper {
+  background: rgb(226, 215, 207);
+  background: -moz-linear-gradient(
+    180deg,
+    rgba(226, 215, 207, 1) 5%,
+    rgba(255, 103, 174, 0) 100%
+  );
+  background: -webkit-linear-gradient(
+    180deg,
+    rgba(226, 215, 207, 1) 5%,
+    rgba(255, 103, 174, 0) 100%
+  );
+  background: linear-gradient(
+    180deg,
+    rgba(226, 215, 207, 1) 5%,
+    rgba(255, 103, 174, 0) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e2d7cf",endColorstr="#ff67ae",GradientType=1);
+
+  width: 100%;
+  max-width: 400px;
+
+  padding: 2px;
+  border-radius: 8px;
 }
 
 .service {
-  width: 90vw;
+  background-color: var(--primary-color);
 
   padding: 20px 20px 30px 20px;
   border-radius: 8px;
@@ -159,18 +187,30 @@ nav {
 
   position: relative;
 }
-.service::before {
-  content: "";
-  background-color: var(--primary-color);
-  width: 3px;
-  height: 90%;
 
-  border-radius: 10px;
+.service-icon-wrapper {
+  width: 100%;
+  height: 130px;
 
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#eyebrows {
+  width: 90px;
+  fill: var(--tertiary-color);
+
+  display: block;
+  margin: auto;
+}
+
+#eyelashes {
+  width: 70px;
+  fill: var(--tertiary-color);
+
+  display: block;
+  margin: auto;
 }
 
 .service h3 {
@@ -191,8 +231,23 @@ nav {
 
 .service p {
   margin-top: 12px;
+  padding-left: 20px;
 
   font-size: 2.2rem;
+
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+#extension-tool-icon {
+  width: 30px;
+  fill: var(--tertiary-color);
+}
+
+#lashlift-tool-icon {
+  width: 30px;
+  fill: var(--tertiary-color);
 }
 
 /*
@@ -202,17 +257,14 @@ nav {
 */
 
 #creations {
-  background-color: var(--quaternary-color);
   width: 100%;
 
-  padding: 20px;
-  box-sizing: border-box;
+  margin: 200px 0px;
 
   display: flex;
-  flex-wrap: wrap-reverse;
   justify-content: center;
   align-items: center;
-  gap: 30px;
+  gap: 70px;
 }
 
 #creations h2 {
@@ -220,22 +272,39 @@ nav {
 
   font-size: 8rem;
   font-weight: 400;
+
+  position: relative;
+}
+#creations h2::after {
+  content: "";
+
+  background-color: var(--primary-color);
+
+  width: 3px;
+  height: 100%;
+
+  position: absolute;
+  top: 50%;
+  right: -30px;
+  transform: translateY(-50%);
+
+  border-radius: 10px;
 }
 
 .creations-photos {
-  width: 330px;
-  height: 400px;
+  width: 430px;
+  height: 600px;
   position: relative;
 }
 
 .creations-photos img {
-  width: 200px;
+  width: 270px;
 
   border: 10px solid var(--primary-color);
   border-bottom: 55px solid var(--primary-color);
   box-sizing: border-box;
 
-  box-shadow: -5px -5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 
   position: absolute;
 }
@@ -268,9 +337,9 @@ footer {
 
 footer svg {
   width: 200px;
-  fill: var(--quaternary-color);
+  fill: var(--primary-color);
 }
 
 footer h3 {
-  color: var(--quaternary-color);
+  color: var(--primary-color);
 }
