--- a/src/CSS/splash-screen.css
+++ b/src/CSS/splash-screen.css
@@ -1,5 +1,5 @@
 .splash-screen {
-  background-color: var(--tertiary-color);
+  background-color: var(--quaternary-color);
   width: 100%;
   height: 100vh;
 
