--- a/src/CSS/menu.css
+++ b/src/CSS/menu.css
@@ -18,7 +18,7 @@
 }
 
 .line {
-  background-color: var(--quaternary-color);
+  background-color: var(--primary-color);
   width: 100%;
   height: 2px;
 
@@ -64,7 +64,7 @@
 */
 
 .menu-screen {
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(30px);
   -webkit-backdrop-filter: blur(30px);
   width: 100%;
@@ -95,7 +95,7 @@
 }
 
 .menu-screen a {
-  color: var(--quaternary-color);
+  color: var(--primary-color);
 
   font-size: 9rem;
   text-decoration: none;
@@ -106,7 +106,9 @@
   content: "";
   background-color: var(--quaternary-color);
   width: 0px;
-  height: 2px;
+  height: 4px;
+
+  border-radius: 10px;
 
   position: absolute;
   bottom: 0;
